lox-tests/tests/for/statement_initializer.stderr
ERROR: at '{': Expected expression, got LeftBrace
 --> 3:6
  |
3 | for ({}; a < 2; a = a + 1) {}
  |      ^

ERROR: Expected ';' after expression
 --> 3:17
  |
3 | for ({}; a < 2; a = a + 1) {}
  |                 ^--------^

ERROR: Undefined variable name 'a'
 --> 3:10
  |
3 | for ({}; a < 2; a = a + 1) {}
  |          ^
